--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
-    "react-native-navigation": "^1.1.253"
+    "react-native-navigation": "^1.1.253",
+    "react-redux": "^5.0.6",
+    "react-redux-typescript": "^2.3.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "@types/react": "^16.0.18",
