--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "dependencies": {
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-navigation": "^1.1.253",
     "react-redux": "^5.0.6",
-    "react-redux-typescript": "^2.3.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
@@ -23,6 +23,8 @@
     "prettier": "^1.7.4",
     "react-native-typescript-transformer": "^1.1.4",
     "react-test-renderer": "16.0.0-beta.5",
+    "remote-redux-devtools": "^0.5.12",
+    "remotedev-server": "^0.2.4",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.3.0",
     "tslint-config-prettier": "^1.6.0",
