--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.49.3",
     "react-native-navigation": "^1.1.253",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "@types/react": "^16.0.18",
