--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-navigation": "^1.1.253",
