--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
+    "@types/jest": "^21.1.5",
     "@types/react": "^16.0.18",
     "@types/react-native": "^0.49.4",
     "babel-jest": "21.2.0",
@@ -27,12 +28,25 @@
     "react-test-renderer": "16.0.0-beta.5",
     "remote-redux-devtools": "^0.5.12",
     "remotedev-server": "^0.2.4",
+    "ts-jest": "^21.1.4",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.3.0",
     "tslint-config-prettier": "^1.6.0",
     "typescript": "^2.5.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
