--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^1.7.4",
     "react-native-typescript-transformer": "^1.1.4",
     "react-test-renderer": "16.0.0-beta.5",
+    "redux-saga-test-plan": "^3.3.0",
     "remote-redux-devtools": "^0.5.12",
     "remotedev-server": "^0.2.4",
     "ts-jest": "^21.1.4",
