--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
     "collectCoverage": false,
     "mapCoverage": true,
-    "collectCoverageFrom": ["src/**/*.ts"]
+    "collectCoverageFrom": ["src/**/*.ts"],
+    "modulePaths": ["<rootDir>"]
   }
 }
