--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-typescript-transformer": "^1.1.4",
     "react-test-renderer": "16.0.0-beta.5",
     "redux-saga-test-plan": "^3.3.0",
+    "redux-testkit": "^1.0.6",
     "remote-redux-devtools": "^0.5.12",
     "remotedev-server": "^0.2.4",
     "ts-jest": "^21.1.4",
