--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "watchman watch-del-all && node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "test-with-coverage": "jest --collectCoverage",
     "remotedev": "remotedev --hostname=localhost --port=8000"
@@ -12,7 +12,9 @@
     "axios": "^0.17.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-elements": "^0.17.0",
     "react-native-navigation": "^1.1.253",
+    "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
@@ -44,10 +46,20 @@
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
     "collectCoverage": false,
     "mapCoverage": true,
-    "collectCoverageFrom": ["src/**/*.ts"],
-    "modulePaths": ["<rootDir>"]
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
