--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-elements": "^0.17.0",
+    "react-native-i18n": "^2.0.9",
     "react-native-navigation": "^1.1.253",
     "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
