--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.17.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-action-button": "^2.8.1",
     "react-native-elements": "^0.17.0",
     "react-native-i18n": "^2.0.9",
     "react-native-navigation": "^1.1.253",
