--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-elements": "^0.17.0",
     "react-native-i18n": "^2.0.9",
     "react-native-navigation": "^1.1.253",
+    "react-native-tableview-simple": "^0.17.1",
     "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
