--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
     "@types/react-native": "^0.49.4",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
     "jest": "21.2.1",
+    "jest-serializer-enzyme": "^1.0.0",
     "prettier": "^1.7.4",
+    "react-dom": "^16.0.0",
+    "react-native-mock-render": "^0.0.13",
     "react-native-typescript-transformer": "^1.1.4",
-    "react-test-renderer": "16.0.0-beta.5",
+    "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
     "redux-saga-test-plan": "^3.3.0",
     "redux-testkit": "^1.0.6",
     "remote-redux-devtools": "^0.5.12",
@@ -54,12 +60,13 @@
     "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
     "collectCoverage": false,
     "mapCoverage": true,
-    "collectCoverageFrom": ["src/**/*.ts*"],
+    "collectCoverageFrom": ["src/**/*.ts", "src/**/*.tsx"],
     "modulePaths": ["<rootDir>"],
     "globals": {
       "ts-jest": {
         "useBabelrc": true
       }
-    }
+    },
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js"
   }
 }
