--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "babel-preset-react-native": "4.0.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.1.4",
     "jest": "21.2.1",
-    "jest-serializer-enzyme": "^1.0.0",
     "prettier": "^1.7.4",
     "react-dom": "^16.0.0",
     "react-native-mock-render": "^0.0.13",
@@ -44,6 +44,7 @@
     "redux-testkit": "^1.0.6",
     "remote-redux-devtools": "^0.5.12",
     "remotedev-server": "^0.2.4",
+    "sinon": "^4.0.2",
     "ts-jest": "^21.1.4",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.3.0",
@@ -67,6 +68,7 @@
         "useBabelrc": true
       }
     },
-    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js"
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
