[#19] feat: simplify and test API methods

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
+    ],
+    "testEnvironment": "node"
   }
 }
