--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "start": "watchman watch-del-all && node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "test-with-coverage": "jest --collectCoverage",
+    "test-with-coverage": "yarn test --collectCoverage",
+    "build:e2e:ios": "detox build --configuration ios.sim.debug",
+    "test:e2e:ios": "detox test --configuration ios.sim.debug",
     "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "dependencies": {
     "axios": "^0.17.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
-    "react-native-action-button": "^2.8.1",
+    "react-native-action-button": "https://github.com/lacasseio/react-native-action-button.git#issue-234-wire-testID",
     "react-native-elements": "^0.17.0",
     "react-native-i18n": "^2.0.9",
     "react-native-image-crop-picker": "^0.18.1",
@@ -30,10 +32,12 @@
     "@types/react-native": "^0.49.4",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "detox": "^5.9.2",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "enzyme-to-json": "^3.1.4",
     "jest": "21.2.1",
+    "mocha": "^4.0.1",
     "prettier": "^1.7.4",
     "react-dom": "^16.0.0",
     "react-native-mock-render": "^0.0.13",
@@ -50,6 +54,14 @@
     "tslint-config-prettier": "^1.6.0",
     "typescript": "^2.5.3"
   },
+  "detox": {
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/RecipeBrowser.app",
+        "build": "xcodebuild -workspace ios/RecipeBrowser.xcworkspace -scheme RecipeBrowser -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
       }
+    }
   }
 }
