--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test-with-coverage": "yarn test --collectCoverage",
     "build:e2e:ios": "detox build --configuration ios.sim.debug",
     "test:e2e:ios": "detox test --configuration ios.sim.debug",
+    "test:e2e:ios:dev": "detox test --reuse --configuration ios.sim.debug",
     "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "typescript": "^2.5.3"
   },
   "detox": {
+    "specs": "./__e2e__",
     "configurations": {
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/RecipeBrowser.app",
