--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "axios": "^0.17.0",
     "glamorous-native": "^1.2.0",
+    "immutable": "^3.8.2",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-action-button": "https://github.com/lacasseio/react-native-action-button.git#issue-234-wire-testID",
+    "react-native-awesome-alerts": "^1.0.3",
     "react-native-elements": "^0.17.0",
     "react-native-i18n": "^2.0.9",
     "react-native-image-crop-picker": "^0.18.1",
@@ -25,6 +27,8 @@
     "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-form": "^7.1.2",
+    "redux-immutablejs": "^0.0.8",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   },
